--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
@@ -20,12 +20,13 @@ id: case name
 question: |
   Is this the name of your case?
 subquestion: | 
-  ${ value('case_name') }
+  ${ case_name }
 yesno: correct_case_name
 --- 
 id: case name collect 
 code: |
-  define('case_name', '${users[0].name} vs. ${other_parties[0].name}')  
+  case_name = (users[0].name.first + other_parties[0].name.first)
+  
 ---
 id: names of opposing parties
 question: |
