update date last known and date of last contact

--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/alternative_means_diligent_search.yml
@@ -74,8 +74,8 @@ code: |
   defendants[0].phone_number
   defendants[0].email
   defendants[0].address.address
+  date_last_known
   last_contact_date
-  written_guess
   check_phone
   check_text
   if check_phone: 
