--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
@@ -60,14 +60,23 @@ fields:
   - Zip: defendant.address.zip
     required: False
 ---
-id: date of last known address
+id: date defendant last lived at address 
 question: |
-  When did  ${ other_parties[1-1].name } last live at ${ other_parties[1-1].address } ?
+  When did  ${ other_parties[0].name } last live at ${ other_parties[0].address } ?
 subquestion: |
   This can be a guess or the exact date 
 fields:
-  - 'Date': date_last_known
+  - 'I do not know the exact date': do_not_know
+    datatype: yesno
+  - '${ other_parties[0].name } last lived at ${ other_parties[0].address } ': date_last_known
     datatype: date
+    show if: 
+      variable: do_not_know
+      is: False
+  - 'Best guess when ${ other_parties[0].name } last lived at ${ other_parties[0].address }': date_last_known
+    show if:
+      variable: do_not_know
+      is: True
 ---
  #   hide if: dont_know_date
  # - 'Guess': address_date_guess 
